--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1746,6 +1746,13 @@ config FB_S3C2410_DEBUG
 	  Turn on debugging messages. Note that you can set/unset at run time
 	  through sysfs
 
+
+config FB_S3C2410_TD240320
+	boolean "3.5 inch 240x320 TFT Landscape LCD(TD35)"
+	depends on FB_S3C2410
+	help
+	  3.5 inch 240x320 TFT Landscape LCD(TD35)
+
 config FB_SM501
 	tristate "Silicon Motion SM501 framebuffer support"
 	depends on FB && MFD_SM501
