--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,24 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+linux-2.6.22.6/.config
+linux-2.6.22.6/.tmp_kallsyms1.S
+linux-2.6.22.6/.tmp_kallsyms2.S
+linux-2.6.22.6/.tmp_vmlinux1
+linux-2.6.22.6/.tmp_vmlinux2
+linux-2.6.22.6/.version
+linux-2.6.22.6/arch/arm/boot/compressed/vmlinux
+linux-2.6.22.6/arch/arm/boot/compressed/vmlinux.lds
+linux-2.6.22.6/arch/arm/kernel/asm-offsets.s
+linux-2.6.22.6/arch/arm/kernel/vmlinux.lds
+linux-2.6.22.6/include/asm
+linux-2.6.22.6/include/asm-arm/.arch
+linux-2.6.22.6/include/asm-arm/asm-offsets.h
+linux-2.6.22.6/include/asm-arm/plat-s3c24xx/gpio-cfg.h
+linux-2.6.22.6/include/config/
+linux-2.6.22.6/include/linux/autoconf.h
+linux-2.6.22.6/include/linux/compile.h
+linux-2.6.22.6/include/linux/utsrelease.h
+linux-2.6.22.6/include/linux/version.h
+linux-2.6.22.6/vmlinux
